--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/shinjiabe-q/shinjiabe-q.github.io/issues"
   },
-  "homepage": "https://github.com/shinjiabe-q/shinjiabe-q.github.io#readme",
+  "homepage": "https://github.com/shinjiabe-q/shinjiabe-q.github.io/public/index.html",
   "devDependencies": {
     "jasmine-core": "^2.6.1",
     "karma": "^1.7.0",
